@@ -1,8 +1,12 @@
 eglibc (2.9-26) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * alpha/submitted-sock_nonblock.diff, hppa/submitted-sock_nonblock.diff:
     create the files at the correct location. Closes: bug#540871.
   * Use the full triplet for optimized and biarch packages.
+
+  [ Samuel Thibault ]
+  * Convert config_os' gnu-gnu into gnu to fix multiarch paths.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 23 Aug 2009 16:56:09 +0200
 
